--- a/projects/shared-components-web/src/styles.scss
+++ b/projects/shared-components-web/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+html {
+  min-width: 100vw;
+  min-height: 100vh;
+  font-family: "Atkinson Hyperlegible", sans-serif;
+
+  body: {
+    padding: 0;
+    margin: 0;
+  }
+}
